removing logs from tracked changes

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ dist/*
 __pycache__/*
 tmp_pics/*
 models/best.pt
+logs.txt.oldest
+logs.txt.old
+logs.txt
+logs.txt.older
+_Final_Output.csv
+output_ML.csv
